<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="4dp"
        app:contentPadding="8dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="112dp"
                    android:layout_height="112dp"
                    android:src="@drawable/gce_ol_biology_h"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_18"
                android:textColor="?attr/colorOnSurface"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:text="@string/version"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvCopyWrite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:text="@string/company"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="24dp"
                android:text="@string/email"
                android:gravity="center"
                android:visibility="gone"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:text="@string/terms_of_service"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <Button
        android:id="@+id/btnPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:text="@string/privacy_policy"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>



</LinearLayout>