<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SubscriptionPackageFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/subscriptionPackageCard"
            layout="@layout/subject_item_card"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/notes"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/color_primary_variant"
                android:foreground="?attr/selectableItemBackground"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <TextView
                android:id="@+id/tvPaper1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/paper_1"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/color_primary_variant"
                android:foreground="?attr/selectableItemBackground"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <TextView
                android:id="@+id/tvPaper2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/paper_2"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/color_primary_variant"
                android:foreground="?attr/selectableItemBackground"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <TextView
                android:id="@+id/tvDictionary"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/dictionary"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/color_primary_variant"
                android:foreground="?attr/selectableItemBackground"/>
        </androidx.cardview.widget.CardView>


    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>